Adding edit page button to items

--- a/css/main.css
+++ b/css/main.css
@@ -106,3 +106,14 @@ NOTE: where users drop items in*/
 	border-radius: 5px;
 	cursor: pointer;
 }
+
+.kanban__edit-input {
+	width: 100%;
+	padding: 10px 0;
+	font-size: 16px;
+	color: rgb(81, 0, 255);
+	background: rgba(0, 0, 0, 0.1);
+	border: none;
+	border-radius: 5px;
+	cursor: pointer;
+}
