Adding initiative to input to items, modified existing json manager functions to accept and manage init

--- a/css/main.css
+++ b/css/main.css
@@ -107,13 +107,10 @@ NOTE: where users drop items in*/
 	cursor: pointer;
 }
 
-.kanban__edit-input {
-	width: 100%;
-	padding: 10px 0;
-	font-size: 16px;
-	color: rgb(81, 0, 255);
-	background: rgba(0, 0, 0, 0.1);
-	border: none;
+.kanban__init-input {
+	padding: 20px 15px;
+	box-sizing: border-box;
+	background: rgb(47, 190, 11);
 	border-radius: 5px;
 	cursor: pointer;
 }
