--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,7 @@
+/* IMPORTANT: THIS IS THE STYLE SHEET FOR THE DM'S VIEW
+TODO: rename file to more appropriately reflect what it's styling
+*/
+
 /*can't change all instances of "kanban" to something more appropriate
 too much of a hassle to rename and I hate it
 -EAVI
