--- a/css/index.css
+++ b/css/index.css
@@ -1,1 +1,59 @@
 /* style sheet for the homescreen*/
+
+body{
+	background-color: darkred;
+}
+
+img {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+#button {
+    padding: 14px 20px;
+    width: 50%;
+    border: none;
+    border-radius: 4px;
+    margin: 8px 0;
+    margin-right: auto;
+    margin-left: auto;
+    margin-bottom: 10px;
+    text-align: center;
+    font-size: 30px;
+    font-family: Helvetica;
+    color: darkslategray;
+    cursor: pointer;
+    display: block;
+}
+
+#form {
+    padding: 12px 0px;
+    width: 50%;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin: 8px 0;
+    margin-right: auto;
+    margin-left: auto;
+    margin-bottom: 5px;
+    text-align: center;
+    font-size: 20px;
+    font-family: Lucida;
+    display: block;
+}
+
+#label {
+    text-align: center;
+    font-size: 25px;
+    font-family: Tahoma;
+    color: aliceblue;
+    display: block;
+}
+
+#title {
+    text-align: center;
+    font-size: 50px;
+    font-family: Tahoma;
+    color: gold;
+}
